# ecommerce-best-products-client

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SKILLS.md  pyproject.toml
.github/workflows/: deploy.yml
helm/ecommerce-client/: Chart.yaml  values.yaml
helm/ecommerce-client/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/client/: __init__.py  agent.py  cache.py  config.py  main.py  models.py
tests/: test_api.py
